# home-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/bots/: __init__.py
apps/bots/telegram/: Dockerfile  README.md  app.py  formatters.py  jobs.py  main.py  messages_es.py  trigger_daily.py
apps/bots/telegram/handlers/: commands.py  messages.py
apps/bots/telegram_bot/: Dockerfile  __init__.py
apps/web/api/: auth.py  main.py  middleware.py  responses.py  scores.py  tasks.py
apps/web/api/auth/: responses.py  routes.py
apps/web/api/finances/: responses.py  routes.py
apps/web/api/reminders/: responses.py  routes.py
apps/web/api/tasks/: routes.py  (+2 more)
apps/web/frontend/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
core/: SCHEMA_VERSION.txt  config.py  db.py  identity.py  notifications.py  schema.sql  seed.py  set_password.py  tokens.py
core/migrations/: 20260717_180000_add_password_hash.py  20260717_183000_make_finances_amount_nullable.py  20260718_000000_users_integer_pk_soft_delete_roles.py
core/utils/: date.py  passwords.py  string.py  tokens.py
docs/: README.md
modules/finances/: README.md  errors.py  repository.py  service.py  types.py
modules/reminders/: README.md  cron.py  errors.py  repository.py  service.py  types.py
modules/tasks/: README.md  errors.py  repository.py  service.py  types.py
modules/users/: README.md  errors.py  repository.py  service.py  types.py
scripts/: generate_migration.py  install_hooks.py  set_password.py  trigger_daily.py
seed/: assignments.yaml  tasks.yaml  users.yaml
tasks/: README.md
tests/: conftest.py
tests/core/: test_db.py  test_utils_date.py  test_utils_passwords.py  test_utils_string.py  test_utils_tokens.py
tests/modules/finances/: test_repository.py  test_service.py
tests/modules/reminders/: test_cron.py  test_repository.py  test_service.py
tests/modules/tasks/: test_repository.py  test_service.py
tests/modules/users/: test_repository.py  test_service.py
(+63 files in other folders)
