[project]
name = "homeos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21",
    "pyyaml>=6",
    "python-dotenv>=1.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "tzdata",
]

[project.optional-dependencies]
dev = ["ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules", "apps"]

[tool.ruff]
line-length = 100