[project]
name = "homeos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21",
    "pyyaml>=6",
    "python-dotenv>=1.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "tzdata",
    "bcrypt>=4",
    "pyjwt>=2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "freezegun",
    "pytest-cov",
    "respx",
    "httpx2",
]

[project.scripts]
install-hooks = "scripts.install_hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules", "apps"]

[tool.ruff]
line-length = 100

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "apps/bots/telegram/messages_es.py",
    "core/migrations/*",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
filterwarnings = [
    "ignore::ResourceWarning",
]
markers = [
    "integration: tests that hit a real SQLite database",
    "unit: tests with mocked dependencies",
    "slow: tests that take longer than average",
]